# eeprom-programmer

./: README.md  flake.nix  shell.nix
firmware/: firmware.ino  sketch.yaml
uploader/: Cargo.toml  default.nix
uploader/src/: core.rs  error.rs  main.rs  protocol.rs  serial.rs
