[package]
name = "eeprom-programmer"
description = "A program to interact with AT28C EEPROM chips"
homepage = "https://github.com/Grazen0/eeprom-programmer"
license = "MIT"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.99"
clap = { version = "4.5.47", features = ["derive"] }
derive_more = { version = "2.0.1", features = ["error", "display", "from"] }
serialport = "4.7.3"
